# KEPLER

./: .coverage  .dockerignore  .env.example  .gitignore  API_REQUIREMENTS.md  DEPLOYMENT.md  Dockerfile  HOSTING_GUIDE.md  LICENSE  Project_Proposal.md  README.md  SETUP_SEARCH.md  TEST_SUMMARY.md  acl_latex.tex  config.example.json  pyproject.toml  railway.json  requirements-distributed.txt  requirements.txt  start.py  test_api_keys.py  test_real_llm.py  test_vision_llm.py
.hypothesis/tmp/: tmp18as650v  tmp1i9qg7lv  tmp3gxo_j7f  tmp7937xkzz  tmp86ab8b33  tmp99lu_qiw  tmpa0_q6o7x  tmpa4hza_so  tmpauf7thlr  tmpb76fu0yc  tmpbi848kny  tmpbqfsinix  tmpdmc8ey31  tmpdsalkq7g  tmpg7erugp8  tmph4ex8i85  tmphe6j5clf  tmpimn7ug8a  tmpit4dq8lv  tmpjkep35s2  tmpjylx9d5l  tmpml447faz  tmpmnxs0cbe  tmpn5mzflgh  tmpncz03a83  tmpnswv5m5x  tmpoqjybsdf  tmpoz10u52_  (+17 more)
docs/: ARCHITECTURE.md
evaluation/: README.md  download_fever.py  fever_evaluator.py  spark_fever_eval.py
frontend/: README.md  SETUP.md  STRUCTURE.md  package-lock.json  package.json  vite.config.ts
infrastructure/: docker-compose.yml
src/: __init__.py  __main__.py  config.py  main.py  pipeline.py
tests/: __init__.py  test_aggregator_agent.py  test_api_setup.py  test_claim_decomposition_agent.py  test_confidence_scorer.py  test_data_models.py  test_error_handling.py  test_input_processor.py  test_integration.py  test_multi_model_aggregator.py  test_pipeline.py  test_reranker_agent.py  test_retriever_agent.py  test_verification_endpoint.py  test_verifier_agent.py
tools/: cost_config.json  cost_estimator.py
(+980 files in other folders)
